@@ -18,8 +18,8 @@
  * Boston, MA  02110-1301, USA.
  */
 
-#ifndef __TRACKER_IOPRIO_H__
-#define __TRACKER_IOPRIO_H__
+#ifndef __LIBTRACKER_IOPRIO_H__
+#define __LIBTRACKER_IOPRIO_H__
 
 G_BEGIN_DECLS
 
@@ -27,4 +27,4 @@ void tracker_ioprio_init (void);
 
 G_END_DECLS
 
-#endif /* __TRACKER_IOPRIO_H__ */
+#endif /* __LIBTRACKER_IOPRIO_H__ */
